; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/peripherals/uart/uart_async_rxtxtasks/main/extr_uart_async_rxtxtasks_main.c_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/peripherals/uart/uart_async_rxtxtasks/main/extr_uart_async_rxtxtasks_main.c_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

@UART_HW_FLOWCTRL_DISABLE = common dso_local global i32 0, align 4
@UART_STOP_BITS_1 = common dso_local global i32 0, align 4
@UART_PARITY_DISABLE = common dso_local global i32 0, align 4
@UART_DATA_8_BITS = common dso_local global i32 0, align 4
@UART_NUM_1 = common dso_local global i32 0, align 4
@TXD_PIN = common dso_local global i32 0, align 4
@RXD_PIN = common dso_local global i32 0, align 4
@UART_PIN_NO_CHANGE = common dso_local global i32 0, align 4
@RX_BUF_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init() #0 {
  %1 = alloca %struct.TYPE_3__, align 4
  %2 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i32 115200, i32* %2, align 4
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  %4 = load i32, i32* @UART_HW_FLOWCTRL_DISABLE, align 4
  store i32 %4, i32* %3, align 4
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 2
  %6 = load i32, i32* @UART_STOP_BITS_1, align 4
  store i32 %6, i32* %5, align 4
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 3
  %8 = load i32, i32* @UART_PARITY_DISABLE, align 4
  store i32 %8, i32* %7, align 4
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 4
  %10 = load i32, i32* @UART_DATA_8_BITS, align 4
  store i32 %10, i32* %9, align 4
  %11 = load i32, i32* @UART_NUM_1, align 4
  %12 = call i32 @uart_param_config(i32 %11, %struct.TYPE_3__* %1)
  %13 = load i32, i32* @UART_NUM_1, align 4
  %14 = load i32, i32* @TXD_PIN, align 4
  %15 = load i32, i32* @RXD_PIN, align 4
  %16 = load i32, i32* @UART_PIN_NO_CHANGE, align 4
  %17 = load i32, i32* @UART_PIN_NO_CHANGE, align 4
  %18 = call i32 @uart_set_pin(i32 %13, i32 %14, i32 %15, i32 %16, i32 %17)
  %19 = load i32, i32* @UART_NUM_1, align 4
  %20 = load i32, i32* @RX_BUF_SIZE, align 4
  %21 = mul nsw i32 %20, 2
  %22 = call i32 @uart_driver_install(i32 %19, i32 %21, i32 0, i32 0, i32* null, i32 0)
  ret void
}

declare dso_local i32 @uart_param_config(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @uart_set_pin(i32, i32, i32, i32, i32) #1

declare dso_local i32 @uart_driver_install(i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
